--- a/public/css/jhan.css
+++ b/public/css/jhan.css
@@ -159,8 +159,23 @@ justify-content: flex-end;
 /* Caja de Promedios */
 .D_Derecha{
     margin-left: 2vw;
+    padding: 20px;
     width: 22vw;
     height: 30vh;
     background: #ffffff;
     box-shadow: 0px 0px 5px 1px#b1abab;
+}
+.D_Derecha>div>h6{
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+.D_Derecha>div{
+    display:grid;
+    grid-template-columns: auto ;
+    
+}
+.D_Derecha>div>span{
+    margin-top: -2vh;
+    
 }
