--- a/public/css/miguel.css
+++ b/public/css/miguel.css
@@ -7,6 +7,7 @@
     color: black;
 }
 .buscador{
+    margin-top: 4vh;
     width: 50vw;
     margin-left: 27vw;
 }
@@ -91,4 +92,9 @@
    
    
 }
+
+
+#text-end:after {
+    content: none;
+ }
 
