--- a/public/css/miguel.css
+++ b/public/css/miguel.css
@@ -57,8 +57,8 @@
     display: grid;
     grid-template-rows:10vh 20vh auto ;
     padding: 10px;
-    height: 40vh;
-    border-bottom: 1px solid #b1abab;
+    height: 35vh;
+    border-top: 1px solid #b1abab;
 }
 .resultados:hover{
     background: #f0f0f0;
@@ -89,7 +89,9 @@
     grid-template-columns: 15vw auto;
     align-content: center;
     justify-content:start;
-   
-   
+    margin-top: -3vh; 
 }
+.paginate{
+    background: yellow;
 
+}
